# Equipo14NumMetApp

./: README.md  method_tests.ipynb  pyproject.toml
nunmetapp/: db.sqbpro  db.sqlite3  manage.py
nunmetapp/bisect_app/: apps.py  models.py  urls.py  views.py
nunmetapp/bisect_app/migrations/: 0001_initial.py  0002_bisectoutput_a_bisectoutput_b_bisectoutput_detal_and_more.py  0003_rename_detal_bisectoutput_tolerance.py  0004_bisectoutput_kind.py  0005_alter_bisectoutput_date_use.py  0006_alter_bisectoutput_date_use.py  0007_alter_bisectoutput_date_use.py  0008_remove_bisectoutput_date_use.py  0009_alter_bisectoutput_a_alter_bisectoutput_b.py
nunmetapp/bisect_app/utils/: bisect.py
nunmetapp/boolerl_app/: apps.py  models.py  urls.py  views.py
nunmetapp/boolerl_app/migrations/: 0001_initial.py  0002_alter_boolerloutput_a_alter_boolerloutput_b.py  0003_alter_boolerloutput_aprox.py
nunmetapp/boolerl_app/utils/: boolerl.py
nunmetapp/cookie/: models.py  urls.py  views.py
nunmetapp/cookie/migrations/: 0001_initial.py
nunmetapp/jacobi/: models.py  urls.py  views.py
nunmetapp/jacobi/migrations/: 0001_initial.py  0002_rename_jacobioutput_jacobi.py  0003_remove_jacobi_date_use.py
nunmetapp/jacobi/utils/: jacobi.py
nunmetapp/methods_app/: apps.py  models.py  urls.py  views.py
nunmetapp/methods_app/migrations/: 0001_initial.py  0002_alter_numericalmethod_inputs_and_more.py  0007_numericalmethod_rk4.py  (+4 more)
nunmetapp/nunmetapp/: asgi.py  settings.py  urls.py  wsgi.py
nunmetapp/rk4/: apps.py  models.py  urls.py  views.py
nunmetapp/user/: urls.py  views.py
(+32 files in other folders)
