[tool.poetry]
name = "equipo14nummetapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
django = "^4.2.6"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.2.0"}
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
